[package]
name = "rusty-solver"
version = "0.1.0"
authors = ["ole-thoeb <43213977+ole-thoeb@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rand = "0.8.3"
strum = "0.25.0"
strum_macros = "0.25.1"
itertools = "0.11.0"
enumset = "1.1.2"
lazy_static = "1.4.0"
ahash = "0.8.3"


[profile.release-with-debug]
inherits = "release"
debug = true