[package]
name = "rusty-solver"
version = "0.1.0"
authors = ["ole-thoeb <43213977+ole-thoeb@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rand = "0.8.5"
strum = "0.26.1"
strum_macros = "0.26.1"
itertools = "0.12.1"
enumset = "1.1.3"
lazy_static = "1.4.0"
ahash = "0.8.10"


[profile.release-with-debug]
inherits = "release"
debug = true